--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,34 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-@custom-variant dark (&:is(.dark *));
+
+
+.card {
+  /* background-color: aqua; */
+  padding: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-color: rgb(191, 101, 101);
+  width: 300px  ;
+  height: 300px;
+  margin: 10px;
+  display: flex;
+  transition: transform 0.3s ease-in-out;
+  margin-bottom: 10px;
+  margin-top: 200px;
+  
+}
+.card .card-image {
+  width: fill-width;
+  height: auto;
+  border-radius: 0.5rem;
+  padding-bottom: 0px;
+  padding-top: 2px;
+}
+
+
+
+/* @custom-variant dark (&:is(.dark *));
 
 @theme inline {
   --color-background: var(--background);
@@ -122,4 +149,4 @@
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
